# collapse

./: .dockerignore  Dockerfile.server  Dockerfile.worker  README.md  formatTrayTime_test.ts  package-lock.json  package.json  test.ts
.github/: dependabot.yml
.github/workflows/: release.yml
clients/desktop/: index.html  package.json  vite.config.ts
clients/desktop/src/: App.tsx  logger.ts  main.tsx  utils.ts
clients/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: capture.rs  crop.rs  gbm_probe.rs  lib.rs  pipewire.rs  screencast.rs  tray.rs  tray_test2.rs
clients/desktop/src/components/: AddSessionPage.tsx  DesktopRecorder.tsx  NamingModal.tsx  PageLayout.tsx  PermissionScreen.tsx  RecordPage.tsx  SourcePicker.tsx  TrayApp.tsx
clients/desktop/src/hooks/: useNativeCapture.ts
clients/react/: API.md  package.json
clients/react/src/: index.ts  types.ts
clients/react/src/api/: client.ts
clients/react/src/components/: CameraPreview.tsx  CollapseRecorder.tsx  Gallery.tsx  SessionCard.tsx  SessionDetail.tsx  StatusBar.tsx
clients/react/src/hooks/: useCameraCapture.ts  useCollapse.ts  useHashRouter.ts  useSession.ts  useSessionTimer.ts  useUploader.ts
clients/react/src/ui/: Badge.tsx  Button.tsx  ErrorDisplay.tsx  Skeleton.tsx  theme.ts
clients/web/: index.html  package.json
clients/web/src/api/: client.ts
clients/web/src/components/: Result.tsx
docs/: integration.md
scripts/: bench-compile.sh  build-please-update-webm.sh  probe-static-webm.mjs  trace-back-compat.mjs
