[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[package]
name = "collapse-desktop"
version = "0.0.21"
edition = "2021"

[lib]
name = "collapse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-http = "2.5.7"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-single-instance = "2.4.0"
url = "2"
window-vibrancy = "0.7.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
